--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,9 @@
         <meta-data
             android:name="xposedminversion"
             android:value="53" />
+        <meta-data
+                android:name="xposedscope"
+                android:resource="@array/scope"/>
 
         <provider
             android:name=".providers.SharedPrefsProvider"
