--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,10 @@ plugins {
 
 apply plugin: 'com.google.android.gms.oss-licenses-plugin'
 
-String DEFAULT_MANIFEST = "217:https://storage.googleapis.com/music-iq-db/updatable_ytm_db/20220626-030028/manifest.json"
+String DEFAULT_MANIFEST = "242:https://storage.googleapis.com/music-iq-db/updatable_ytm_db/20230129-030041/manifest.json"
 
-def tagName = '2.0.5'
-def version = 205
+def tagName = '2.1'
+def version = 210
 
 def getKeystoreProperties() {
     def properties = new Properties()
@@ -35,12 +35,12 @@ def getKeystoreProperties() {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.kieronquinn.app.ambientmusicmod"
         minSdk 28
-        targetSdk 32
+        targetSdk 33
         versionCode version
         versionName tagName
 
@@ -109,30 +109,30 @@ protobuf {
 
 dependencies {
     //AndroidX
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'androidx.core:core-splashscreen:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.work:work-runtime-ktx:2.7.1"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation "androidx.lifecycle:lifecycle-service:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-service:2.5.1"
 
     //Material UI
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
 
     //MonetCompat for colours on < S
     implementation 'com.github.KieronQuinn:MonetCompat:0.4.1'
 
     //Dependency Injection
-    implementation "io.insert-koin:koin-android:3.1.6"
+    implementation "io.insert-koin:koin-android:3.3.1"
 
     //Protobuf is used in reading data from ASI
-    implementation "com.google.protobuf:protobuf-javalite:3.19.2"
+    implementation "com.google.protobuf:protobuf-javalite:3.21.9"
 
     //Lottie for animations
-    implementation 'com.airbnb.android:lottie:5.0.3'
+    implementation 'com.airbnb.android:lottie:5.2.0'
 
     //Used for chip layouts
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
@@ -141,7 +141,7 @@ dependencies {
     implementation 'com.github.alxrm:audiowave-progressbar:0.9.2'
 
     implementation 'com.google.guava:guava:31.1-android'
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.9.1'
 
     //Update & APK downloading
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -189,6 +189,6 @@ dependencies {
     implementation 'com.github.duanhong169:colorpicker:1.1.6'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
