--- a/ondemandoverlay/build.gradle
+++ b/ondemandoverlay/build.gradle
@@ -58,6 +58,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.kieronquinn.app.ondemandoverlay'
 }
 
 dependencies {}
