--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.nav_version = "2.5.3"
-    ext.protobufVersion = '0.9.1'
-    ext.shizuku_version = '12.1.0'
-    ext.refine_version = '4.1.0'
+    ext.nav_version = "2.7.6"
+    ext.protobufVersion = '0.9.4'
+    ext.shizuku_version = '13.1.5'
+    ext.refine_version = '4.4.0'
     repositories {
         google()
     }
@@ -16,11 +16,12 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '7.4.2' apply false
-    id 'com.android.library' version '7.4.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+    id 'com.android.application' version '8.2.2' apply false
+    id 'com.android.library' version '8.2.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
     id 'com.google.dagger.hilt.android' version '2.41' apply false
     id 'dev.rikka.tools.refine' version '4.1.0' apply false
+    id 'com.google.devtools.ksp' version '1.9.22-1.0.17' apply false
 }
 
 task clean(type: Delete) {
