--- a/systemstubs/build.gradle
+++ b/systemstubs/build.gradle
@@ -23,6 +23,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+    buildFeatures {
+        aidl true
+    }
+    namespace 'com.kieronquinn.app.systemstubs'
 }
 
 dependencies {
